[package]
name = "pdf_from_json"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
genpdf = {version="0.2.0", features = ["images"]}
image = { version="0.23.14", features = ["webp"] }
indicatif = "0.17.8"
regex = "1.11.1"
reqwest = {version = "0.12.8", features = ["blocking"]}
serde = {version = "1.0.213", features = ["serde_derive"]}
serde_json = "1.0.132"
